--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -18,6 +18,6 @@ $(MAIN): $(OBJ)
 	$(CC) -c $(CFLAGS) $< -o $@
 
 clean:
-	-rm -f $(MAIN) $(OBJ) *part0 *part1 generateddata.txt
+	-rm -f $(MAIN) $(OBJ) *part0 *part1 generateddata.txt ??????????????????????????????????????* netfiles.dat
 
 .PHONY: clean install
